# raspberry-pi-motd

./: LICENSE  README.md  pyproject.toml
src/raspberry_pi_motd/: __main__.py
