[project]
name = "raspberry-pi-motd"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Calnan",email = "pwc3@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyfiglet (>=1.0.2,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "blessings (>=1.7,<2.0)"
]

[tool.poetry]
packages = [{include = "raspberry_pi_motd", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
